// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute crypto api free should apply overrides 1`] = `
{
  "data": {
    "results": [
      [
        "OGfHdehjHraavx1cn4Ua96mPJmY=",
        {
          "data": {
            "base": "BTC",
            "endpoint": "crypto",
            "overrides": {
              "coinpaprika": {
                "BTC": "btc-bitcoin",
              },
            },
            "quote": "USD",
            "resultPath": "price",
          },
          "debug": {
            "batchCacheKey": "17asiOIup7+B7FZygsiP87VYnrg=",
            "batchChildrenCacheKeys": [
              [
                "myCLTCj4zYsnsKksIJQuUgg6g+Y=",
                {
                  "data": {
                    "base": "ETH",
                    "endpoint": "crypto",
                    "overrides": {
                      "coinpaprika": {
                        "BTC": "btc-bitcoin",
                      },
                    },
                    "quote": "USD",
                    "resultPath": "price",
                  },
                  "id": "1",
                },
              ],
            ],
            "cacheKey": "H4Z7T1+jd4RflsqhbnoOPBZALtw=",
          },
          "id": "1",
        },
        40000.2425813062,
      ],
      [
        "myCLTCj4zYsnsKksIJQuUgg6g+Y=",
        {
          "data": {
            "base": "ETH",
            "endpoint": "crypto",
            "overrides": {
              "coinpaprika": {
                "BTC": "btc-bitcoin",
              },
            },
            "quote": "USD",
            "resultPath": "price",
          },
          "debug": {
            "batchCacheKey": "17asiOIup7+B7FZygsiP87VYnrg=",
            "batchChildrenCacheKeys": [
              [
                "myCLTCj4zYsnsKksIJQuUgg6g+Y=",
                {
                  "data": {
                    "base": "ETH",
                    "endpoint": "crypto",
                    "overrides": {
                      "coinpaprika": {
                        "BTC": "btc-bitcoin",
                      },
                    },
                    "quote": "USD",
                    "resultPath": "price",
                  },
                  "id": "1",
                },
              ],
            ],
            "cacheKey": "H4Z7T1+jd4RflsqhbnoOPBZALtw=",
          },
          "id": "1",
        },
        3949.2425813062,
      ],
    ],
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "statusCode": 200,
}
`;

exports[`execute crypto api free should return success for multiple symbols 1`] = `
{
  "data": {
    "results": [
      [
        "myCLTCj4zYsnsKksIJQuUgg6g+Y=",
        {
          "data": {
            "base": "ETH",
            "endpoint": "crypto",
            "quote": "USD",
            "resultPath": "price",
          },
          "debug": {
            "batchCacheKey": "17asiOIup7+B7FZygsiP87VYnrg=",
            "batchChildrenCacheKeys": [
              [
                "myCLTCj4zYsnsKksIJQuUgg6g+Y=",
                {
                  "data": {
                    "base": "ETH",
                    "endpoint": "crypto",
                    "quote": "USD",
                    "resultPath": "price",
                  },
                  "id": "1",
                },
              ],
            ],
            "cacheKey": "H4Z7T1+jd4RflsqhbnoOPBZALtw=",
          },
          "id": "1",
        },
        3949.2425813062,
      ],
      [
        "OGfHdehjHraavx1cn4Ua96mPJmY=",
        {
          "data": {
            "base": "BTC",
            "endpoint": "crypto",
            "quote": "USD",
            "resultPath": "price",
          },
          "debug": {
            "batchCacheKey": "17asiOIup7+B7FZygsiP87VYnrg=",
            "batchChildrenCacheKeys": [
              [
                "myCLTCj4zYsnsKksIJQuUgg6g+Y=",
                {
                  "data": {
                    "base": "ETH",
                    "endpoint": "crypto",
                    "quote": "USD",
                    "resultPath": "price",
                  },
                  "id": "1",
                },
              ],
            ],
            "cacheKey": "H4Z7T1+jd4RflsqhbnoOPBZALtw=",
          },
          "id": "1",
        },
        0.11,
      ],
    ],
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "statusCode": 200,
}
`;

exports[`execute crypto api free should return success for single coinid 1`] = `
{
  "data": {
    "result": 3949.2425813062,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 3949.2425813062,
  "statusCode": 200,
}
`;

exports[`execute crypto api free should return success for single symbol 1`] = `
{
  "data": {
    "result": 3949.2425813062,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 3949.2425813062,
  "statusCode": 200,
}
`;

exports[`execute crypto-single api Successful request with override Should be successful 1`] = `3949.2425813062`;

exports[`execute crypto-single api Successful request with warning about duplicate ticker symbol Should be successful 1`] = `0.11`;

exports[`execute crypto-single api Successful request without override Should be successful 1`] = `3949.2425813062`;

exports[`execute dominance api should return success 1`] = `
{
  "data": {
    "result": 44.68,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 44.68,
  "statusCode": 200,
}
`;

exports[`execute globalmarketcap api should return success 1`] = `
{
  "data": {
    "result": 2559344984924,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 2559344984924,
  "statusCode": 200,
}
`;

exports[`execute marketcap api should return success 1`] = `
{
  "data": {
    "result": 466143026900,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 466143026900,
  "statusCode": 200,
}
`;

exports[`execute volume api should return success 1`] = `
{
  "data": {
    "result": 24136641726.138,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 24136641726.138,
  "statusCode": 200,
}
`;

exports[`execute vwap api should return success 1`] = `
{
  "data": {
    "result": 4000,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 4000,
  "statusCode": 200,
}
`;

exports[`execute vwap api should return success with override 1`] = `
{
  "data": {
    "result": 0.949723,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 0.949723,
  "statusCode": 200,
}
`;

exports[`execute with api key crypto api pro should return success 1`] = `
{
  "error": {
    "feedID": "ETH/USD",
    "message": "Nock: No match for request {
  "method": "GET",
  "url": "https://api-pro.coinpaprika.com/v1/coins",
  "headers": {
    "accept": "application/json, text/plain, */*",
    "authorization": "fake-api-key",
    "user-agent": "axios/0.24.0"
  }
}",
    "name": "AdapterError",
    "url": "https:/api-pro.coinpaprika.com/v1/coins",
  },
  "jobRunID": "1",
  "providerStatusCode": 0,
  "status": "errored",
  "statusCode": 200,
}
`;
